// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[routes] <NewsArticleRoute /> renders 404 error page when no news article exists 1`] = `
<article
  class="ErrorPage"
>
  <header
    class="PageHeader"
  >
    <h1>
      Page not found
    </h1>
  </header>
  <div
    class="ErrorPage-content"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style="vertical-align: middle;"
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m20 33.4c7.3 0 13.4-6.1 13.4-13.4s-6.1-13.4-13.4-13.4-13.4 6.1-13.4 13.4 6.1 13.4 13.4 13.4z m0-30c9.2 0 16.6 7.4 16.6 16.6s-7.4 16.6-16.6 16.6-16.6-7.4-16.6-16.6 7.4-16.6 16.6-16.6z m-1.6 8.2h3.2v10h-3.2v-10z m0 13.4h3.2v3.4h-3.2v-3.4z"
        />
      </g>
    </svg>
    <p>
      This page does not exist - please use the site navigation to find what you're looking for.
    </p>
  </div>
</article>
`;

exports[`[routes] <NewsArticleRoute /> renders 500 error page when slug isn't in the store 1`] = `
<article
  class="ErrorPage"
>
  <header
    class="PageHeader"
  >
    <h1>
      An error has occurred
    </h1>
  </header>
  <div
    class="ErrorPage-content"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style="vertical-align: middle;"
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m20 33.4c7.3 0 13.4-6.1 13.4-13.4s-6.1-13.4-13.4-13.4-13.4 6.1-13.4 13.4 6.1 13.4 13.4 13.4z m0-30c9.2 0 16.6 7.4 16.6 16.6s-7.4 16.6-16.6 16.6-16.6-7.4-16.6-16.6 7.4-16.6 16.6-16.6z m-1.6 8.2h3.2v10h-3.2v-10z m0 13.4h3.2v3.4h-3.2v-3.4z"
        />
      </g>
    </svg>
    <p>
      An error has occurred, please try again.
    </p>
  </div>
</article>
`;

exports[`[routes] <NewsArticleRoute /> renders a loader when item is being fetched 1`] = `
<span
  class="Loader PageLoader"
>
  <div
    class="Loader-animation"
  >
    <span />
    <span />
    <span />
  </div>
</span>
`;

exports[`[routes] <NewsArticleRoute /> renders correctly 1`] = `
<article
  class="NewsArticle"
>
  <header
    class="PageHeader"
  >
    <h1>
      New website launched
    </h1>
  </header>
  <div
    class="NewsArticle-body"
  >
    <figure
      class="NewsArticle-image isLoading"
    >
      <img
        src="https://s3.amazonaws.com/mynameisviii-static/news/new-website-launched.jpg"
        title="New website launched"
      />
      <span
        class="Loader"
      >
        <div
          class="Loader-animation"
        >
          <span />
          <span />
          <span />
        </div>
      </span>
    </figure>
    <section
      class="NewsArticle-meta"
    >
      <div
        class="NewsArticle-posted"
      >
        <svg
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align:middle"
          viewBox="0 0 40 40"
          width="1em"
        >
          <g>
            <path
              d="m20.9 11.6v8.8l7.5 4.4-1.3 2.2-8.7-5.4v-10h2.5z m-0.9 21.8q5.5 0 9.4-4t4-9.4-4-9.4-9.4-4-9.4 4-4 9.4 4 9.4 9.4 4z m0-30q6.9 0 11.8 4.8t4.8 11.8-4.8 11.8-11.8 4.8-11.8-4.8-4.8-11.8 4.8-11.8 11.8-4.8z"
            />
          </g>
        </svg>
         
        <span>
          Posted
        </span>
         
        <time
          class="DateTime"
          datetime="2018-06-20T21:20:00"
          title="Wednesday, June 20, 2018, 9:20 PM"
        >
          <span>
            in 6 months
          </span>
        </time>
         
        <span>
          by
        </span>
         Viii
      </div>
      <div
        class="Type Type-news"
      >
        <svg
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align:middle"
          viewBox="0 0 40 40"
          width="1em"
        >
          <g>
            <path
              d="m21.6 21.6v-10h-3.2v10h3.2z m0 6.8v-3.4h-3.2v3.4h3.2z m16.8-8.4l-4.1 4.6 0.5 6.2-6 1.3-3.1 5.3-5.7-2.4-5.7 2.4-3.1-5.2-6-1.4 0.5-6.2-4.1-4.6 4.1-4.7-0.5-6.1 6-1.3 3.1-5.3 5.7 2.4 5.7-2.4 3.1 5.3 6 1.3-0.5 6.2z"
            />
          </g>
        </svg>
         News
      </div>
    </section>
    <section
      class="NewsArticle-content"
    >
      <div
        class="NewsArticle-contentText"
      >
        <p>
          The brand new official Viii website is now live!
        </p>
        <p>
          The new site features a fully responsive design for viewing on all mobile devices, as well as desktop browsers, plus an all-new news section, releases section and an appearances section for upcoming shows.
        </p>
        <p>
          Stay tuned for more features to be released in the near future.
        </p>
      </div>
    </section>
  </div>
</article>
`;
